--- a/tfg/public/css/estilos.css
+++ b/tfg/public/css/estilos.css
@@ -37,7 +37,7 @@ body{
     height: 100%;
     background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../images/fondoInicio.jpg');
     background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
     z-index: -1;
 }
 
@@ -50,6 +50,7 @@ body{
 
 .nav__title{
     font-weight: 300;
+    font-size: 30px;
 }
 
 .nav__link{
@@ -59,6 +60,7 @@ body{
     grid-auto-flow: column;
     grid-auto-columns: max-content;
     gap: 2em;
+    font-size: 18px;
 }
 
 .nav__items{
