--- a/tfg/public/css/estilos.css
+++ b/tfg/public/css/estilos.css
@@ -451,7 +451,6 @@ body{
 }
 
 .footer__icons{
-    display: inline-flex;
     margin-bottom: 10px;
 }
 
@@ -459,6 +458,32 @@ body{
     width: 30px;
 }
 
+@media (max-width:800px){
+    .nav__menu{
+        display: block;
+    }
+    .nav__link--menu{
+        position: fixed;
+        background-color: black;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        z-index: 100;
+        opacity: 0;
+        pointer-events: none;
+        transition: .7s opacity;
+    }
+    .nav__link--show{
+        --show: block;
+        opacity: 1;
+        pointer-events: unset;
+    }
+}
 
 
 
