--- a/tfg/public/css/estilosUser.css
+++ b/tfg/public/css/estilosUser.css
@@ -35,7 +35,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../images/fondoInicio.jpg');
+    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../images/menuUser.jpg');
     background-size: cover;
     clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
     z-index: -1;
@@ -50,7 +50,7 @@ body{
 
 .nav__title{
     font-weight: 300;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .nav__link{
@@ -73,7 +73,7 @@ body{
 }
 
 .nav__links:hover{
-    color: #67c1fd;
+    color: #fad3a7;
 }
 
 .nav__menu{
@@ -106,6 +106,10 @@ body{
     font-size: 3rem
 }
 
+.hero__subtitle{
+    font-size: 20px
+}
+
 .hero__paragraph{
     margin-bottom: 20px;
 }
@@ -118,72 +122,6 @@ body{
     text-decoration: none;
     padding: 13px 30px;
     border-radius: 32px;
-}
-
-.about{
-    text-align: center;
-}
-
-.subtitle{
-    color: var(--color-title);
-    font-size: 2rem;
-    margin-bottom: 25px;
-}
-
-.about__paragraph{
-    line-height: 1.7;
-}
-
-.about__main{
-    padding-top: 80px;
-    display: grid;
-    width: 90%;
-    margin: 0 auto;
-    gap: 1em;
-    overflow: hidden;
-    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
-}
-
-.about__icons{
-    display: grid;
-    gap: 1em;
-    justify-items: center;
-    width: 260px;
-    overflow: hidden;
-    margin: auto;
-}
-
-.about__icon{
-    width: 40px;
-}
-
-.knowledge{
-    background-color: #e5e5f7;
-    background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
-    background-size: 20px 20px;
-    background-position: 0 0,10px 10px;
-    overflow: hidden;
-}
-
-.knowledge__container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1em;
-    align-items: center;
-}
-
-.knowledge__picture{
-    max-width: 500px;
-}
-
-.knowledge__paragraph{
-    line-height: 1.7;
-    margin-bottom: 15px;
-}
-
-.knowledge__img{
-    width: 100%;
-    display: block;
 }
 
 .price{
@@ -199,6 +137,11 @@ body{
     align-items: center;
 }
 
+.subtitle{
+    font-size: 40px;
+    text-align: center;
+}
+
 .price__element{
     background-color: #e5e5f7;
     text-align: center;
@@ -206,21 +149,9 @@ body{
     width: 330px;
     padding: 40px;
     --color-plan: #696871;
-    --color-price: #1D293F;
-    --bg-cta: white;
-    --color-cta: #5454D4;
+    --color-price: #1d293f;
+    --bg-cta: rgb(37, 163, 236);
     --color-items: #696871;
-}
-
-.price__element--best{
-    width: 370px;
-    padding: 60px 40px;
-    background-color: #FF7143;
-    --color-plan: rgb(255 255 255 / 75%);
-    --color-price: #fff;
-    --bg-cta: #9F3919;
-    --color-cta: #fff;
-    --color-items: #fff;
 }
 
 .price__name{
@@ -241,143 +172,35 @@ body{
     font-weight: 300;
     font-size: 1.2rem;
     margin-bottom: 50px;
-    color: var(--color-items);
+    color: var(--color-items)
 }
 
 .price__cta{
-    background-color: var(--bg-cta);
+    display: block;
     padding: 20px 0;
     border-radius: 10px;
     text-decoration: none;
-    display: block;
+    background-color: var(--bg-cta);
     font-weight: 600;
-    color: var(--color-cta);
-    box-shadow: 0 0 1px rgba(0, 0, 0, .5);
+    color: #fff;
+    box-shadow: 0 0 1px rgba(0,0, 0, .5);
 }
 
-.testimony{
-    background-color: #e5e5f7;
+.full{
+    background-color: rgb(230, 51, 51);
 }
 
-.testimony__container{
-    display: grid;
-    grid-template-columns: 50px 1fr 50px;
-    gap: 1em;
-    align-items: center;
+.desunirme{
+    background-color: rgb(230, 51, 51);
 }
 
-.testimony__body{
-    display: grid;
-    grid-template-columns: 1fr max-content;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2em;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    opacity: 0;
-    pointer-events: none;
+.desunirme:hover{
+    background-color: #ec3737dc;
 }
 
-.testimony__body--show{
-    pointer-events: unset;
-    opacity: 1;
-    transition: opacity 1.5s ease-in-out;
+.free:hover{
+    background-color: #0953dd8c;
 }
-
-.testimony__img{
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: 50% 30%;
-}
-
-.testimony__texts{
-    max-width: 700px;
-}
-
-.testimony__course{
-    background-color: royalblue;
-    color: white;
-    display: inline-block;
-    padding: 5px;
-}
-
-.testimony__arrow{
-    width: 90%;
-    cursor: pointer;
-}
-
-.questions{
-    text-align: center;
-}
-
-.questions__container{
-    display: grid;
-    gap: 2em;
-    padding-top: 50px;
-    padding-bottom: 100px;
-}
-
-.questions__padding{
-    padding: 0;
-    transition: padding .3s;
-    border: 1px solid #5454D4;
-    border-radius: 6px;
-}
-
-.questions__padding--add{
-    padding-bottom: 30px;
-}
-
-.questions__answer{
-    padding: 0 30px 0;
-    overflow: hidden;
-}
-
-.questions__title{
-    text-align: left;
-    display: flex;
-    font-size: 20px;
-    padding: 30px 0 30px;
-    cursor: pointer;
-    color: var(--color-title);
-    justify-content: space-between;
-}
-
-.questions__arrow{
-    border-radius: 50%;
-    background-color: var(--color-title);
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-    margin-left: 10px;
-    transition: transform .3s;
-}
-
-.questions__arrow--rotate{
-    transform: rotate(180deg);
-}
-
-.questions__show{
-    text-align: left;
-    height: 0;
-    transition: height .3s;
-}
-
-.questions__img{
-    display: block;
-}
-
-.questions__copy{
-    width: 60%;
-    margin: 0 auto;
-    margin-bottom: 30px;
-}
-
 .footer{
     background-color: #1D293F;
 }
@@ -498,36 +321,8 @@ body{
     .hero__title{
         font-size: 2.5rem;
     }
-    .about__main{
-        gap: 2em;
-    }
-    .about__icons:last-of-type{
-        grid-column: 1/-1;
-    }
-    .knowledge__container{
-        grid-template-columns: 1fr;
-        grid-template-rows: max-content 1fr;
-        gap: 3em;
-        text-align: center;
-    }
-    .knowledge__picture{
-        grid-row: 1/2;
-        justify-self: center;
-    }
-    .questions__copy{
-        width: 100%;
-    }
     .footer__container{
         flex-wrap: wrap;
-    }
-    .nav--footer{
-        width: 100%;
-        justify-items: center;
-    }
-    .nav__link--footer{
-        width: 100%;
-        justify-content: space-evenly;
-        margin: 0;
     }
     .footer__form{
         width: 100%;
@@ -545,24 +340,9 @@ body{
     .hero__paragraph{
         font-size: 1rem;
     }
-    .subtitle{
-        font-size: 1.8rem;
-    }
-    .questions__title{
-        font-size: 1rem;
-    }
-    .nav--footer{
-        padding: 0;
-    }
     .footer__title{
         justify-self: start;
         margin-bottom: 15px;
-    }
-    .nav--footer{
-        padding-bottom: 60px;
-    }
-    .nav__link--footer{
-        justify-content: space-between;
     }
     .footer__inputs{
         flex-wrap: wrap;
@@ -573,10 +353,3 @@ body{
         margin-bottom: 16px;
     }
 }
-
-
-
-
-
-
-
