Realizado buscador por origen y destino de viajes

--- a/tfg/public/css/estilosUser.css
+++ b/tfg/public/css/estilosUser.css
@@ -91,6 +91,44 @@ body{
     display: var(--show, none);
 }
 
+.buscar{
+    position: absolute;
+    padding: 5px;
+    margin-left: 200px;
+}
+
+.buscar input{
+    width: -10px;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 18px;
+    color: black;
+    outline: none;
+    border: 1px solid silver;
+    border-radius: 30px;
+}
+
+.btnSearch{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #440080;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.btnsend{
+    background: #440080;
+    border: #440080;
+    color: white;
+}
+
 .hero__container{
     max-width: 800px;
     display: grid;
