--- a/tfg/public/css/estilosAdmin.css
+++ b/tfg/public/css/estilosAdmin.css
@@ -171,6 +171,10 @@ body{
     margin-left: 30px;
 }
 
+.search input::placeholder{
+    font-size: 16px;
+}
+
 .search input{
     width: -10px;
     height: 40px;
@@ -280,7 +284,6 @@ body{
 
 .details .recentOrders{
     position: relative;
-    display: grid;
     min-height: 500px;
     background: var(--white);
     padding: 20px;
@@ -308,6 +311,26 @@ body{
     border-radius: 6px;
 }
 
+.btn.lock{
+    height: 30px;
+    font-size: 20px;
+    font-weight: 500;
+    border: none;
+    background: red;
+}
+
+.btn.unlock{
+    height: 30px;
+    font-size: 20px;
+    font-weight: 500;
+    border: none;
+    background: green;
+}
+
+.details .recentOrders{
+    width: 1500px;
+}
+
 .details table{
     width: 100%;
     border-collapse: collapse;
@@ -317,6 +340,7 @@ body{
 .details table thead td{
     font-weight: 600;
 }
+
 
 .details .recentOrders table tr{
     color: var(--black1);
@@ -336,85 +360,28 @@ body{
     padding: 10px;
 }
 
-.details .recentOrders table tr td:last-child{
-    text-align: end;
+.details .recentOrders table tr td:nth-child(1){
+    text-align: right;
 }
 
 .details .recentOrders table tr td:nth-child(2){
-    text-align: end;
+    text-align: right;
 }
 
 .details .recentOrders table tr td:nth-child(3){
+    text-align: right;
+}
+
+.details .recentOrders table tr td:nth-child(4){
     text-align: center;
 }
 
-.status.delivered{
-    padding: 2px 4px;
-    background: #8de02c;
-    color: var(--white);
-    border-radius: 4px;
-    font-size: 14px;
-    font-weight: 500;
+.details .recentOrders table tr td:nth-child(5){
+    text-align: left;
 }
 
-.status.pending{
-    padding: 2px 4px;
-    background: #f00;
-    color: var(--white);
-    border-radius: 4px;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.recentCustomers{
-    position: relative;
-    display: grid;
-    min-height: 500px;
-    padding: 20px;
-    background: var(--white);
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-    border-radius: 20px;
-}
-
-.recentCustomers .imgBx{
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.recentCustomers .imgBx img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.recentCustomers table tr:hover{
-    background: var(--blue);
-    color: var(--white);
-}
-
-.recentCustomers table tr td{
-    padding: 12px 10px;
-}
-
-.recentCustomers table tr td h4{
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.2em;
-}
-
-.recentCustomers table tr td h4 span{
-    background: var(--blue);
-    color: var(--white);
-}
-
-.recentCustomers table tr:hover td h4 span{
-    color: var(--white)
+.details .recentOrders table tr td:nth-child(6){
+    text-align: left;
 }
 
 @media(max-width: 991px){
