--- a/tfg/public/css/alquiler.css
+++ b/tfg/public/css/alquiler.css
@@ -49,7 +49,7 @@ body{
 }
 
 .register-bg{
-    background-image: url('../images/imageRegister.jpg');
+    background-image: url('../images/imageAlquiler.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
